package eu.telecomnancy.rpg.observer;

public interface Observer {
    void update(Observable observable);
}
